--- a/dockerfiles/crond/Dockerfile
+++ b/dockerfiles/crond/Dockerfile
@@ -1,7 +1,8 @@
 FROM centos
 MAINTAINER zhaojunlike<zhaojunlike@gmail.com>
-ADD ./crond/task.sh /server/task.sh
-##安装并添加任务到crontab
-RUN yum install crontabs -y \
-    && (crontab -l; echo "*/1 * * * * /server/task.sh >>/var/log/task.log" ) | crontab
-CMD crond
+VOLUME ./task.sh /server/task.sh
+###安装并添加任务到crontab
+#RUN yum install crontabs -y \
+#    && (crontab -l; echo "*/1 * * * * /server/task.sh" ) | crontab
+##挂掉了
+CMD /bin/bash /server/task.sh
